RESOLVED FIXED83622
TextureMapperGL.cpp breaks build with OpenGL ES
https://bugs.webkit.org/show_bug.cgi?id=83622
Summary TextureMapperGL.cpp breaks build with OpenGL ES
Lauro Moura Maranhao Neto
Reported 2012-04-10 14:42:50 PDT
Revision 113678 added unguarded GL_UNPACK_* that breaks the build with OpenGL ES.
Attachments
Patch (1.87 KB, patch)
2012-04-10 15:00 PDT, Lauro Moura Maranhao Neto
no flags
Lauro Moura Maranhao Neto
Comment 1 2012-04-10 15:00:33 PDT
WebKit Review Bot
Comment 2 2012-04-10 20:35:22 PDT
Comment on attachment 136549 [details] Patch Clearing flags on attachment: 136549 Committed r113822: <http://trac.webkit.org/changeset/113822>
WebKit Review Bot
Comment 3 2012-04-10 20:35:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.