TextureMapperGL.cpp breaks build with OpenGL ES https://bugs.webkit.org/show_bug.cgi?id=83622

Patch by Lauro Neto <lauro.neto@openbossa.org> on 2012-04-10
Reviewed by Noam Rosenthal.

Add !defined(TEXMAP_OPENGL_ES_2) guards as suggested by
No'am Rosenthal.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::updateContents):

Canonical link: https://commits.webkit.org/101120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113822 268f45cc-cd09-0410-ab3c-d52691b4dbfc